primitives/api/test/tests/ui/missing_versioned_method_multiple_vers.stderr
error[E0046]: not all trait items implemented, missing: `test3`
  --> tests/ui/missing_versioned_method_multiple_vers.rs:20:2
   |
12 |         fn test3();
   |         ----------- `test3` from trait
...
20 |     impl self::Api<Block> for Runtime {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `test3` in implementation
